# SynchronAIse

./: .gitignore  LICENSE  README-2.md  README.md
.cursor/: mcp.example.json
.cursor/plans/: synchronaise_architecture_plan_cc92921c.plan.md
action/: action.yml  package.json  playwright.config.ts
action/scripts/: audit.mjs  changed-files.mjs  comment.mjs  lib.mjs  render.mjs
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: audit.py  fix.py  report.py
backend/app/core/: config.py  schema.py
backend/app/data/: tokens.json
backend/app/prompts/: classification.md
backend/app/services/: classifier.py  code_parser.py  figma_parser.py  patch.py  storage.py  tree_builder.py  vlm.py
backend/scripts/: metrics.py  validate_contract.py
backend/tests/: golden_cases.py  test_classifier.py  test_contract.py
deploy/: README.md  deploy.ps1  deploy.sh
deploy/helm/synchronaise/: Chart.yaml  values.yaml
docs/: DEPLOYMENT_PLAN.md  architecture.md  building-blocks.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: DriftScore.tsx  ExplanationPanel.tsx  GraphView.tsx  PromptBox.tsx  Studio.tsx  TreeNode.tsx
frontend/src/lib/: layout.ts
synchronaise-demo/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
synchronaise-demo/ground-truth/: pr-1.json  pr-2.json  pr-3.json  pr-4.json  pr-5.json  pr-6.json
synchronaise-demo/src/: main.tsx  tokens.css
(+7 files in other folders)
